--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Styles/reset.css">
+    <link rel="stylesheet" href="Styles/Main.css">
+
+
     <title>Pizzaria</title>
 </head>
 <body>
+    <header class="header">
+        <h1 class="header__title">Pizzaria - 
+        <span class="header__title--blue">Menu</span>
+    </h1>
+</header>
+
     
 </body>
 </html>
