--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/reset.css">
     <link rel="stylesheet" href="Styles/Main.css">
 
+    <script src="https://kit.fontawesome.com/ab63973773.js" crossorigin="anonymous" defer></script>
+
 
     <title>Pizzaria</title>
 </head>
+
 <body>
     <header class="header">
-        <h1 class="header__title">Pizzaria - 
-        <span class="header__title--blue">Menu</span>
-    </h1>
-</header>
+        <h1 class="header__title">Pizzaria -
+            <span class="header__title--blue">Menu</span>
+        </h1>
+    </header>
 
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <footer class="footer">
+        <address class="footer__columns footer__endereço">
+            Endereço: <br>
+            Rua das Margaridas, 25 <br>
+            Centro - São Paulo - SP
+        </address>
+
+
+        <section class="footer__columns footer__social">
+            <p class="footer__social-text">Siga nos nas redes sociais:</p>
+            <div class="footer__social-icon">
+                <a href="#"><i class="footer__social-icon fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="footer__social-icon fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="footer__social-icon fa-brands fa-instagram"></i></a>
+            </div>
+        </section>
+
+        <div class="footer__columns footer__dev">
+            <p>Desenvolvido por XYZ - Soluções digitais</p>
+        </div>
+
+    </footer>
 </body>
+
 </html>
