--- a/index.html
+++ b/index.html
@@ -20,11 +20,21 @@
         </h1>
     </header>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <main>
+        <form class="form" action="">
+            <span>Login</span>
+
+            <input class="form__input" type="text" name="" id="login" placeholder="Login">
+            <input class="form__input" type="password" name="" id="senha" placeholder="Senha">
+
+            <div class="form__btn-area">
+                <input class="form__btn" type="button" value="Registrar">
+                <input class="form__btn form__btn--action" type="submit" value="Login">
+            </div>
+        </form>
+    </main>
+
 
     <footer class="footer">
         <address class="footer__columns footer__endereço">
