--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <h1 class="header__title">Pizzaria -
+        <h1 class="header__title">Pizzas -
             <span class="header__title--blue">Menu</span>
         </h1>
     </header>
@@ -25,8 +25,8 @@
         <form class="form" action="">
             <span>Login</span>
 
-            <input class="form__input" type="text" name="" id="login" placeholder="Login">
-            <input class="form__input" type="password" name="" id="senha" placeholder="Senha">
+            <input class="form__input" type="email" name="" id="login" placeholder="Login" required>
+            <input class="form__input" type="password" name="" id="senha" placeholder="Senha" required maxlength="8">
 
             <div class="form__btn-area">
                 <input class="form__btn" type="button" value="Registrar">
@@ -39,8 +39,7 @@
     <footer class="footer">
         <address class="footer__columns footer__endereço">
             Endereço: <br>
-            Rua das Margaridas, 25 <br>
-            Centro - São Paulo - SP
+            Rua das Margaridas, 25 - Centro - São Paulo - SP
         </address>
 
 
