--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <header class="header">
-        <h1 class="header__title">Pizzaria -
+        <img class="header__logo" src="image/Logo.png" alt="">
+        <h1 class="header__title">  Juquinha Pizzaria -
             <span class="header__title--blue">Menu</span>
         </h1>
     </header>
